use generated client for login and logout posts, add toasts
