# libs/api/__generated__/models/LoginParams.ts
@@ -1,0 +1,56 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Oxide Region API
+ * API for interacting with the Oxide control plane
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Contact: api@oxide.computer
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+/**
+ *
+ * @export
+ * @interface LoginParams
+ */
+export interface LoginParams {
+  /**
+   *
+   * @type {string}
+   * @memberof LoginParams
+   */
+  username: string
+}
+
+export function LoginParamsFromJSON(json: any): LoginParams {
+  return LoginParamsFromJSONTyped(json, false)
+}
+
+export function LoginParamsFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): LoginParams {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    username: json['username'],
+  }
+}
+
+export function LoginParamsToJSON(value?: LoginParams | null): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    username: value.username,
+  }
+}
